--- a/src/app/home/information/information.page.html
+++ b/src/app/home/information/information.page.html
@@ -42,17 +42,17 @@
         <ion-row>
           <ion-col>
             <div>
-              2ppm
+              1-3ppm
             </div>
           </ion-col>
           <ion-col>
             <div>
-              2ppm
+              3-6ppm
             </div>
           </ion-col>
           <ion-col>
             <div>
-              2ppm
+              >6ppm
             </div>
           </ion-col>
         </ion-row>
@@ -97,17 +97,17 @@
         <ion-row>
           <ion-col>
             <div>
-              2ppm
+              0.01-0.05ppm
             </div>
           </ion-col>
           <ion-col>
             <div>
-              2ppm
+              0.05-0.12ppm
             </div>
           </ion-col>
           <ion-col>
             <div>
-              2ppm
+              >0.12ppm
             </div>
           </ion-col>
         </ion-row>
@@ -151,17 +151,17 @@
         <ion-row>
           <ion-col>
             <div>
-              2ppm
+              10-25ppm
             </div>
           </ion-col>
           <ion-col>
             <div>
-              2ppm
+              25-50ppm
             </div>
           </ion-col>
           <ion-col>
             <div>
-              2ppm
+              >50ppm
             </div>
           </ion-col>
         </ion-row>
