--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -21,7 +21,7 @@
     <div id="map" #map style="height:100%;" data-step="3" data-intro="Visualiza tu mapa con todo tipo de detalles. Con un simple vistazo puedes saber la cantidad de gas que hay en toda la zona gracias al mapa de calor que creamos para ti. Coge tu sensor, sal a la calle y analiza todos tus datos. Además te damos la ruta más corta o menos contaminada hacia tu destino. ¿A qué esperas?">
     </div>
     <ion-button id="directionsButton" #directionsButton (click)="mostrarDirections()" class="directionsButton" shape="round">
-        <ion-icon name="map"></ion-icon> Directions
+        <ion-icon name="navigate"></ion-icon> Navigate
     </ion-button>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
         <ion-fab-button>
