Add route to fav

--- a/src/app/routes/directions/directions.page.html
+++ b/src/app/routes/directions/directions.page.html
@@ -9,7 +9,7 @@
         <ion-button *ngIf="rutaEnMarcha" color="danger" (click)="finalizarRuta()">
           Finish
         </ion-button>
-        <ion-button > <ion-icon color="warning" name="star-outline"></ion-icon></ion-button>
+        <ion-button (click)="agregarRutaAfavoritas()"> <ion-icon color="warning" name="star-outline"></ion-icon></ion-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
