Added close button

--- a/src/app/home/information/information.page.html
+++ b/src/app/home/information/information.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Additional Information</ion-title>
+    <ion-buttons slot="end">
+        <ion-button (click)="cerrarInfo()">Close</ion-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
