--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-buttons slot="start">
+        <ion-buttons *ngIf="sideMenu" slot="start">
             <ion-menu-button></ion-menu-button>
           </ion-buttons>
         <ion-title>Home</ion-title>
