--- a/src/app/admin-dashboard/admin-dashboard.page.html
+++ b/src/app/admin-dashboard/admin-dashboard.page.html
@@ -1,39 +1,50 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Dashboard</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Dashboard</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        <ion-card>
-          <ion-card-content>
-            <h2>Users</h2>
-            <ion-icon class="big-icon" name="person"></ion-icon>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-      <ion-col>
-        <ion-card>
-          <ion-card-content>
-            <h2>Routes</h2>
-            <ion-icon class="big-icon" name="navigate"></ion-icon>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-      <ion-col>
-        <ion-card>
-          <ion-card-content>
-            <h2>Alerts</h2>
-            <ion-icon class="big-icon" name="alert"></ion-icon>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <ion-card>
+                    <ion-card-content>
+                        <h2>Users</h2>
+                        <ion-icon class="big-icon" name="person"></ion-icon>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+            <ion-col>
+                <ion-card>
+                    <ion-card-content>
+                        <h2>Routes</h2>
+                        <ion-icon class="big-icon" name="navigate"></ion-icon>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+            <ion-col>
+                <ion-card>
+                    <ion-card-content>
+                        <h2>Alerts</h2>
+                        <ion-icon class="big-icon" name="alert"></ion-icon>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+        </ion-row>
+        <ion-col>
+            <ion-card>
+                <ion-card-content>
+                    <h2>Previous Maps</h2>
+                    <ion-icon class="big-icon" name="map"></ion-icon>
+                </ion-card-content>
+            </ion-card>
+        </ion-col>
+        <ion-row>
+
+        </ion-row>
+    </ion-grid>
 </ion-content>
