--- a/src/app/admin-dashboard/admin-dashboard.page.html
+++ b/src/app/admin-dashboard/admin-dashboard.page.html
@@ -36,7 +36,7 @@
             </ion-col>
         </ion-row>
         <ion-col>
-            <ion-card>
+            <ion-card routerLink="/p">
                 <ion-card-content>
                     <h2>Previous Maps</h2>
                     <ion-icon class="big-icon" name="map"></ion-icon>
