--- a/src/app/admin-dashboard-users/admin-dashboard-users.page.html
+++ b/src/app/admin-dashboard-users/admin-dashboard-users.page.html
@@ -8,5 +8,11 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row *ngFor="let user of users">
+      <ion-col>
+        {{user.name}}
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
