--- a/src/app/admin-dashboard-users/admin-dashboard-users.page.html
+++ b/src/app/admin-dashboard-users/admin-dashboard-users.page.html
@@ -9,9 +9,27 @@
 
 <ion-content>
   <ion-grid>
-    <ion-row *ngFor="let user of users">
-      <ion-col>
+    <ion-row class="row">
+      <ion-col class="col-header">
+        <p>Name</p>
+      </ion-col>
+      <ion-col class="col-header">
+        <p>Telephone</p>
+      </ion-col>
+      <ion-col class="col-header">
+        <p>Role</p>
+      </ion-col>
+    </ion-row>
+    <ion-row class="row" *ngFor="let user of users">
+      <ion-col class="col">
         {{user.name}}
+      </ion-col>
+      <ion-col class="col">
+        {{user.telephone}}
+      </ion-col>
+      <ion-col class="col">
+        <p *ngIf="user.role == 1">Usuario</p>
+        <p *ngIf="user.role == 2">Administrador</p>
       </ion-col>
     </ion-row>
   </ion-grid>
