--- a/src/app/home/information/information.page.html
+++ b/src/app/home/information/information.page.html
@@ -43,7 +43,7 @@
         <ion-row>
           <ion-col>
             <div>
-             Normal levels of the gas. Relax, it's safe
+             Normal level of the gas. Relax, it's safe
             </div>
           </ion-col>
           <ion-col>
