--- a/src/app/routes/routes.page.html
+++ b/src/app/routes/routes.page.html
@@ -1,7 +1,10 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title data-step="1" data-intro="En esta pestaña puedes encontrar cualquier lugar del MUNDO!">Routes</ion-title>
-    </ion-toolbar>
+        <ion-buttons *ngIf="sideMenu" slot="start">
+            <ion-menu-button></ion-menu-button>
+          </ion-buttons>
+          <ion-title data-step="1" data-intro="En esta pestaña puedes encontrar cualquier lugar del MUNDO!">Routes</ion-title>
+        </ion-toolbar>
 </ion-header>
 
 <ion-content>
