Image upload finished

--- a/src/app/photos/photos.page.html
+++ b/src/app/photos/photos.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 <input type="file" (change)="onFileSelected($event)">
-<button type="button" (click)="onUpload()">Subir Foto</button>
+<ion-button type="button" (click)="onUpload()">Subir Foto</ion-button>
 <ion-content>
   <ion-grid>
       <ion-card data-step="2" data-intro="Aqui te mostramos una pequeña explicación de qué puedes hacer con tus fotos">
